resolvido problema de visibilidade no input do form e adicionado tag <a> para a logo

--- a/Projeto_Segundo_Html+Css/style.css
+++ b/Projeto_Segundo_Html+Css/style.css
@@ -112,6 +112,7 @@ header ul li a:hover{
 	border: none;
 	border-radius: 5px 0px 0px  5px;
 	margin-top: 20px;
+	color:#201E1E;
 }
 
 .form button {
